# ElMD

./: .gitignore  ElMD.py  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: pytest.yml
ElMD/: ElMD.py  ElementDict.json  __init__.py  meta.yaml  test_ElMD.py
ElMD/el_lookup/: atomic.json  cgcnn.json  elemnet.json  jarvis.json  jarvis_sc.json  matscholar.json  mendeleev.json  mod_petti.json  petti.json
