[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ElMD"
authors = [{name = "Cameron Hargreaves", email = "cameron.h@rgreaves.me.uk"}]
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",  
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
  ]
dynamic = ["version", "description"]

dependencies = [
          "numba",
          "numpy",
          "scipy",
          ]

keywords = [
    "ChemInformatics",
    "Materials Science",
    "Machine Learning",
    "Materials Representation"
    ]

[project.urls]
Home = "https://github.com/lrcfmd/ElMD"
